# Mastering-Android-NDK

./: .gitignore  LICENSE  README.md
Chapter1/1_AntApp/: AndroidManifest.xml  project.properties
Chapter1/1_AntApp/res/values/: strings.xml
Chapter1/2_GradleApp/: build.gradle
Chapter1/2_GradleApp/res/values/: strings.xml
Chapter1/3_NDK/jni/: Android.mk  Wrappers.cpp
Chapter10/1_Asteroids/: CMakeLists.txt  main.cpp
Chapter10/1_Asteroids/Src/: Actors.cpp  Actors.h  Game.cpp  Game.h  GamePages.cpp  GamePages.h  Globals.cpp  Globals.h  Pages.cpp  Pages.h
Chapter10/1_Asteroids/Src/Audio/: Audio.cpp  Audio.h  StreamingProviders.h
Chapter10/1_Asteroids/assets/: theme.mod
Chapter10/1_Asteroids/jni/: Application.mk
Chapter10/1_Asteroids/jni/SDL/: Android.mk
Chapter10/1_Asteroids/jni/src/: Android.mk
Chapter10/1_Particles/: CMakeLists.txt  main.cpp
Chapter10/1_Particles/Src/: ParticleEmitter.cpp  ParticleEmitter.h  ParticleMaterial.cpp  ParticleMaterial.h  ParticleNode.cpp  ParticleNode.h  ParticleSystem.cpp  ParticleSystem.h
Chapter10/1_Particles/jni/src/: Android.mk  Android_static.mk
Chapter10/X_Control/: CMakeLists.txt  main.cpp
Chapter10/X_Control/Src/: ScreenJoystick.cpp  ScreenJoystick.h
Chapter10/Y_GameAndMenus/: CMakeLists.txt  main.cpp
Chapter10/Y_GameAndMenus/Src/: Pages.h
Chapter10/Y_GameAndMenus/Src/UI/: LayoutController.cpp  LayoutController.h  UIStatic.cpp  UIStatic.h
Chapter2/1_Curl/jni/: Android.mk  Application.mk
Chapter2/1_Curl/jni/curl-ios-build-scripts/: README.LV
Chapter2/1_Curl/jni/lib/: curl_config.h
Chapter2/2_OpenSSL/lib/: android-config.mk
Chapter2/2_OpenSSL/lib/apps/: Android.mk
Chapter2/2_OpenSSL/lib/crypto/: Android.mk
Chapter2/3_FreeImage/: Makefile.blackberry  Makefile.blackberry.arm  Makefile.blackberry.x86  Makefile.ios7  Makefile.osx  Makefile.srcs
Chapter2/3_FreeImage/jni/: Android.mk  Application.mk
Chapter2/3_FreeImage_Example/: AndroidManifest.xml  FITest.cpp  FI_Utils.cpp  FI_Utils.h  Makefile  build.gradle
Chapter2/3_FreeImage_Example/jni/: Android.mk  Application.mk  Wrappers.cpp
Chapter2/4_FreeType/: CombinedFI.cpp  FI_Utils.cpp  FI_Utils.h  FT_Utils.cpp  FT_Utils.h  Makefile  font_info.txt
Chapter2/5_Theora/: LinkCode.h  Makefile  ReadMe.txt  ReadTheoraInfo.cpp
Chapter2/6_OpenAL/: .gitignore
Chapter2/6_OpenAL/Alc/: android.c
Chapter2/6_OpenAL/jni/: Android.mk  Application.mk
Chapter3/1_IntrusivePtr/: Makefile  main.cpp
Chapter3/2_AsyncTaskQueues/: Event.h  IntrusivePtr.cpp  IntrusivePtr.h  Makefile  Thread.cpp  Thread.h  WorkerThread.h  main_MessagePump.cpp  main_WorkerThread.cpp
Chapter3/3_Downloader/: Blob.h  CurlWrap.cpp  CurlWrap.h  DownloadTask.cpp  DownloadTask.h  Downloader.cpp  Downloader.h  Makefile  main.cpp
Chapter3/4_Licensing/: AndroidManifest.xml  Makefile  main.cpp
Chapter3/4_Licensing/jni/: Android.mk  LicenseChecker.cpp  Wrappers.cpp
Chapter3/4_Licensing/src/: Callbacks.h  License.h
Chapter3/5_Flurry/: AndroidManifest.xml  Makefile  ant.properties  build.xml  main.cpp
Chapter3/5_Flurry/jni/: Android.mk  LJNI.c
Chapter3/5_Flurry/src/: Callbacks.cpp  Callbacks.h  Log.h
Chapter3/google-play-services_lib/: build.xml  project.properties
Chapter4/1_ArchiveFileAccess/: CMakeLists.txt  Makefile  main.cpp
Chapter4/1_ArchiveFileAccess/jni/: Android.mk  Wrappers.cpp
Chapter4/1_ArchiveFileAccess/src/: Archive.cpp  Archive.h  Blob.h  Callbacks.h  FileSystem.cpp  FileSystem.h  Files.h  Log.h  MountPoint.h  StrUtils.h  Streams.h  libcompress.c  libcompress.h
Chapter5/1_InitOpenAL/: LAL.cpp  Makefile  Timers.cpp  Timers.h  main.cpp
Chapter5/2_Streaming/: Makefile  main.cpp
Chapter5/2_Streaming/src/: Audio.h  ToneGenerator.h
Chapter5/3_GuitarStringSound/: GString.h  Makefile  main.cpp
Chapter5/4_ModPlug/: CMakeLists.txt  Makefile  main.cpp
Chapter5/4_ModPlug/assets/: augmented_emotions.xm
Chapter5/4_ModPlug/jni/: Android.mk  WrappersJNI.c
Chapter5/4_ModPlug/src/: Decoders.cpp  Decoders.h  DecodingProvider.h  MOD.h
Chapter5/5_MiniMP3/: Makefile  main.cpp
Chapter5/5_MiniMP3/jni/: Android.mk
Chapter5/5_MiniMP3/src/: MP3.h  minimp3.c  minimp3.h
Chapter5/6_OGG/: Makefile  build.gradle  main.cpp  project.properties
Chapter5/6_OGG/jni/: Android.mk  Application.mk
Chapter5/6_OGG/src/: OGG.h  OGG_Callbacks.inc
Chapter6/1_GLES3/: CMakeLists.txt  Makefile  build.xml  main.cpp
Chapter6/1_GLES3/Engine/: Callbacks.h  Log.h  SDLLibrary.h  SDLWindow.cpp  SDLWindow.h
Chapter6/1_GLES3/Engine/Core/: Library.cpp  Library.h  Platform.h  VecMath.cpp  VecMath.h
Chapter6/1_GLES3/Engine/Graphics/: Bitmap.cpp  Bitmap.h  FI_Utils.cpp  FI_Utils.h  Geometry.cpp  Geometry.h
Chapter6/1_GLES3/Engine/LGL/: GLClasses.cpp  GLClasses.h  LGL.cpp  LGL.h  LGLAPI.h  LGL_Android.h  LGL_Windows.h
Chapter6/1_GLES3/GL/: glxext.h  wglext.h
Chapter6/1_GLES3/jni/: Application.mk
Chapter6/1_GLES3/jni/src/: Android.mk
Chapter6/1_GLES3/src/com/packtpub/ndkmastering/: AppActivity.java
Chapter7/1_SDL2UI/: CMakeLists.txt  License.txt  Makefile  main.cpp
Chapter7/1_SDL2UI/Src/: SDLWindow.cpp  SDLWindow.h
Chapter7/1_SDL2UI/Src/Rendering/: Canvas.cpp  Canvas.h  TextRenderer.cpp  TextRenderer.h  ft.h
Chapter7/1_SDL2UI/Src/UI/: LayoutController.cpp  LayoutController.h  UIButton.h  UIStatic.cpp  UIStatic.h  UIView.cpp  UIView.h
Chapter7/1_SDL2UI/jni/src/: Android.mk
Chapter8/1_SceneGraphRenderer/: CMakeLists.txt  Makefile  main.cpp
Chapter8/1_SceneGraphRenderer/Src/: Camera.h  Material.h  Nodes.cpp  Nodes.h  ROP.cpp  ROP.h  Traversers.h
Chapter8/2_ShadowMaps/: CMakeLists.txt  Makefile  main.cpp
Chapter8/2_ShadowMaps/Src/: Camera.h  GLFrameBuffer.cpp  GLFrameBuffer.h  Light.cpp  Light.h  Loader_OBJ.cpp  Loader_OBJ.h  Material.cpp  Material.h  Nodes.cpp  Nodes.h  ROP.cpp  ROP.h  Technique.cpp  Technique.h  Trackball.h  Traversers.h
Chapter8/2_ShadowMaps/jni/src/: Android.mk
Chapter9/1_Boids/: AndroidManifest.xml  CMakeLists.txt  Makefile  main.cpp
Chapter9/1_Boids/Src/: Boids.h
Chapter9/2_UIPages/: CMakeLists.txt  main.cpp
(+37 files in other folders)
